@@ -2,6 +2,9 @@
 
 Changes with Apache 2.3.14
 
+  *) core: For '*' or '_default_' vhosts, use a wildcard address of any 
+     address family, rather than IPv4 only.  [Joe Orton]
+
   *) core, mod_rewrite, mod_ssl, mod_nw_ssl: Make the SERVER_NAME variable
      include [ ] for literal IPv6 addresses, as mandated by RFC 3875.
      PR 26005. [Stefan Fritsch]
